--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -252,7 +252,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="news-title red-followline italic mt-0">Day 1.0 - Saturday 15/06/19</h2>
+              <h2 class="news-title italic mt-0">Day 1.0 - Saturday 15/06/19</h2>
               <p>
                 We start off the day with morning coffee provided to register your attendance, 
                 meetup and get to know what is install for you. Presentation will kick off with a brief intro from our host, 
