--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -267,7 +267,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="h2">Day 1.1 - Afternoon session</h2>
+              <h2 class="news-title italic mt-0">Day 1.1 - Afternoon session</h2>
               <p>
                 Continue with a marathon of various exciting Python related topics to indulge in. 
                 Choose the topic that you prefer. Take advantage of this great networking event to know more people, 
@@ -282,7 +282,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="h2">Day 1.2 - Epic party</h2>
+              <h2 class="news-title italic mt-0">Day 1.2 - Epic party</h2>
               <p>
                 Not to be missed! Great opportunity to wind down after a day full of inspiring presentations and 
                 knowledge exchange. Get together in a relaxed and upbeat environment with drinks and food provided as 
@@ -296,7 +296,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="h2">Day 2.0 - Sunday 16/06/19</h2>
+              <h2 class="news-title italic mt-0">Day 2.0 - Sunday 16/06/19</h2>
               <p>
                 Start off the day light and easy with a cup of morning coffee with compliments from us to boost your 
                 energy. Day 2 kicks off with another keynote speaker in a state-of-the-art venue packed with motivated 
@@ -311,7 +311,7 @@
               <div class="line"></div>
             </div> 
             <div class="schedule-right">
-                <h2 class="h2">Day 2.1 - Afternoon</h2>
+                <h2 class="news-title italic mt-0">Day 2.1 - Afternoon</h2>
                 <p>
                 Don’t pass on the chance to learn or improve your knowledge on a subject that could provide you with 
                 a competitive edge. Take advantage of an extended and diversified list of talks and workshops. 
@@ -325,7 +325,7 @@
               <div class="line"></div>
             </div> 
             <div class="schedule-right">
-                <h2 class="h2">Day 2.2 - Closing</h2>
+                <h2 class="news-title italic mt-0">Day 2.2 - Closing</h2>
                 <p>
                 We wrap off the 2 day conference with our final keynote speaker, We gather our sponsors, partners, 
                 team and you as we  advance our community effort to the next level for Pycon in Thailand.
