--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -53,33 +53,30 @@
           amet commodo nulla facilisi nullam vehicula ipsum a arcu.
         </p>
       </div>
+     <div class="features">
       <div class="item">
-        <img alt="" src="https://placeholder.pics/svg/200x200" />
-        <h3>26 Speakers</h3>
+        <img alt="" src="/airplane-grad.png" />
+        <h3>4 Keynotes</h3>
         <p>
-          Vitae aliquet nec, ullamcorper sit amet risus nullam eget felis eget
-          nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Porta
-          nibh venenatis cras sed felis eget velit aliquet!
         </p>
       </div>
       <div class="item">
-        <img alt="" src="https://placeholder.pics/svg/200x200" />
-        <h3>2 Days</h3>
+        <img alt="" src="/talks-grad.png" />
+        <h3>+40 talks</h3>
         <p>
-          Gravida quis blandit turpis cursus in hac habitasse platea dictumst
-          quisque sagittis, purus. Arcu cursus vitae congue mauris rhoncus
-          aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque
-          habitant morbi tristique.
         </p>
       </div>
       <div class="item">
-        <img alt="" src="https://placeholder.pics/svg/200x200" />
-        <h3>400 Pythonistas</h3>
+        <img alt="" src="/python.png" />
+        <h3>+300 Pythonistas</h3>
         <p>
-          Gravida quis blandit turpis cursus in hac habitasse platea dictumst
-          quisque sagittis, purus. Arcu cursus vitae congue mauris rhoncus
-          aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque
-          habitant morbi tristique.
+          
+        </p>
+      </div>
+      <div class="item">
+        <img alt="" src="/party-grad.png" />
+        <h3>1 great party</h3>
+        <p>
         </p>
       </div>
     </div>
