--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -43,44 +43,34 @@
             src="/upside-down-city2.png"
         />
 
-    <div class="features">
-      <div class="item">
-        <img alt="" src="https://placeholder.pics/svg/200x200" />
-        <h3>4 Keynotes</h3>
-        <p>
-          Enim tortor, at auctor urna nunc id cursus metus aliquam eleifend mi
-          in nulla posuere sollicitudin aliquam ultrices! Sollicitudin nibh sit
-          amet commodo nulla facilisi nullam vehicula ipsum a arcu.
-        </p>
-      </div>
-     <div class="features">
+   <div class="features">
       <div class="item">
         <img alt="" src="/airplane-grad.png" />
-        <h3>4 Keynotes</h3>
+        <h3 text-align="left">4 Keynotes</h3>
         <p>
         </p>
       </div>
       <div class="item">
         <img alt="" src="/talks-grad.png" />
-        <h3>+40 talks</h3>
+        <h3 text-align="left">+40 talks</h3>
         <p>
         </p>
       </div>
       <div class="item">
         <img alt="" src="/python.png" />
-        <h3>+300 Pythonistas</h3>
+        <h3 text-align="left">+300 Pythonistas</h3>
         <p>
           
         </p>
       </div>
       <div class="item">
         <img alt="" src="/party-grad.png" />
-        <h3>1 great party</h3>
+        <h3 text-align="left">1 great party</h3>
         <p>
+          
         </p>
       </div>
     </div>
-
         <div class="news mx-auto -mt-6 max-w-md text-center">
             <h2 class="news-title red-followline italic mt-0">แจ้งข่าว</h2>
             <div class="schedule list-reset text-left text-lg">
