--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -380,23 +380,18 @@
             <h3 class="sponsors-subhead">
               GOLD Sponsors
             </h3>
-            <!-- <div class="sponsors-cards">
-            <a class="sponsors-link sponsors-link--gold">
+            <div class="sponsors-cards">
+            <a class="sponsors-link sponsors-link--gold" href="https://newlogic.io/" target="_blank">
               <div class="sponsors-card">
-                <img alt="" src="https://placeholder.pics/svg/200" />
+                <img alt="" src="/logos-2009/Gold-newlogic.png" />
               </div>
             </a>
-                 <a class="sponsors-link sponsors-link--gold">
+              <a class="sponsors-link sponsors-link--gold" href="https://newlogic.io/" target="_blank>
               <div class="sponsors-card">
-                <img alt="" src="https://placeholder.pics/svg/200" />
+                <img alt="" src="/logos-2009/gold-odds_logo.png" />
               </div>
-            </a>
-                 <a class="sponsors-link sponsors-link--gold" href="">
-              <div class="sponsors-card">
-                <img alt="" src="https://placeholder.pics/svg/200" />
-              </div>
-            </a>
-          </div> -->
+            </a>             
+          </div>
           </section>
 
           <section class="sponsors-section">
@@ -413,6 +408,11 @@
               <a class="sponsors-link sponsors-link--silver" href="https://www.parkerbridge.co.th/" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/silver-PB.png" />
+                </div>
+              </a>
+            <a class="sponsors-link sponsors-link--silver" href="http://elastic.co" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-elastic.png" />
                 </div>
               </a>
             </div>
@@ -432,10 +432,14 @@
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
                 </div>
+              </a>                                                                    
+              <a class="sponsors-link sponsors-link--individual" href="https://www.gummybear.tech" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/Startup-Gummy-Bear.png" />
+                </div>
               </a>
             </div>
           </section>
-
           <section class="sponsors-section">
             <h3 class="sponsors-subhead">
               PARTNERS
