--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -294,25 +294,20 @@
           <h3 class="sponsors-subhead">
             GOLD Sponsors
           </h3>
-          <!-- <div class="sponsors-cards">
-            <a class="sponsors-link sponsors-link--gold">
-              <div class="sponsors-card">
-                <img alt="" src="https://placeholder.pics/svg/200" />
-              </div>
-            </a>
-               <a class="sponsors-link sponsors-link--gold">
-              <div class="sponsors-card">
-                <img alt="" src="https://placeholder.pics/svg/200" />
-              </div>
-            </a>
-               <a class="sponsors-link sponsors-link--gold" href="">
-              <div class="sponsors-card">
-                <img alt="" src="https://placeholder.pics/svg/200" />
-              </div>
-            </a>
-          </div> -->
-        </section>
-
+            <div class="sponsors-cards">
+               <a class="sponsors-link sponsors-link--gold" href="https://newlogic.io/" target="_blank">
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-newlogic.png" width="250"/>
+                    </div>
+                  </a>
+                    <a class="sponsors-link sponsors-link--gold" href="http://odds.team" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/gold-odds_logo.png" width="250"/>
+                    </div>
+                  </a>             
+                </div>
+                </section>
+                                                                      
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             SILVER Sponsors
@@ -321,21 +316,23 @@
             <a
               class="sponsors-link sponsors-link--silver"
               href="https://www.vizrt.com/contact/vizrt--thailand"
-              target="_blank"
-            >
+              target="_blank">
                 <div class="sponsors-card">
                 <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
               </div>
             </a>
-               <a
-              class="sponsors-link sponsors-link--silver"
+               <a class="sponsors-link sponsors-link--silver"
               href="https://www.parkerbridge.co.th/"
-              target="_blank"
-            >
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/silver-PB.png" />
               </div>
             </a>
+             <a class="sponsors-link sponsors-link--silver" href="http://elastic.co" target="_blank">
+               <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-elastic.png" />
+                </div>
+              </a>
           </div>
         </section>
 
@@ -356,6 +353,11 @@
               target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/Startup-Pronto-Logo.png" />
+              </div>
+            </a>
+            <a class="sponsors-link sponsors-link--individual" href="https://www.gummybear.tech" target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/Startup-Gummy-Bear.png" />
               </div>
             </a>
           </div>
