--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -386,13 +386,13 @@
                 <img alt="" src="/logos-2009/Gold-newlogic.png" />
               </div>
             </a>
-              <a class="sponsors-link sponsors-link--gold" href="https://newlogic.io/" target="_blank>
+              <a class="sponsors-link sponsors-link--gold" href="http://odds.team" target="_blank>
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/gold-odds_logo.png" />
               </div>
             </a>             
           </div>
-          </section>
+         </section>
 
           <section class="sponsors-section">
             <h3 class="sponsors-subhead">
