--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -290,7 +290,7 @@ type: micro
             <div class="sponsors-card-wrap__right">
                 <p>
                     We are keen to meet and discuss with developers about their work, interests and future ambitions.
-                    Please contact us if you would like to talk!"
+                    Please contact us if you would like to talk!
                 </p>
             </div>
         </div>
@@ -319,10 +319,10 @@ type: micro
     </div>
 
         <div class="sponsors-card-wrap">
-                <div class="sponsors-card-wrap__left">
-                <h3 class="sponsors-subhead sponsors-subhead--black">
+          <h3 class="sponsors-subhead sponsors-subhead--black">
                     MARKETING & DESIGN PARTNER
                 </h3>
+                <div class="sponsors-card-wrap__left"> 
                     <a class="sponsors-link--partner" href="https://marketingcan.com" target="_blank">
                         <div class="sponsors-card">
                             <img alt="" src="/logos-2009/partner-marketingcan.png" />
