--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -231,7 +231,7 @@
       </section>
 
       <section class="my-8 text-center">
-          <h2 class="welcome-submission-title red-prepostline">
+          <h2 class="countdown-title red-prepostline font-bold">
             SCHEDULE
           </h2>
           <div class="schedule-row">
@@ -240,7 +240,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="news-title italic mt-0">Day 1.0 - Saturday 15/06/19</h2>
+              <h2 class="countdown-title italic mt-0">Day 1.0 - Saturday 15/06/19</h2>
               <p>
                 We start off the day with morning coffee provided to register your attendance, 
                 meetup and get to know what is install for you. Presentation will kick off with a brief intro from our host, 
@@ -255,7 +255,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="news-title italic mt-0">Day 1.1 - Afternoon session</h2>
+              <h2 class="countdown-title italic mt-0">Day 1.1 - Afternoon session</h2>
               <p>
                 Continue with a marathon of various exciting Python related topics to indulge in. 
                 Choose the topic that you prefer. Take advantage of this great networking event to know more people, 
@@ -270,7 +270,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="news-title italic mt-0">Day 1.2 - Epic party</h2>
+              <h2 class="countdown-title italic mt-0">Day 1.2 - Epic party</h2>
               <p>
                 Not to be missed! Great opportunity to wind down after a day full of inspiring presentations and 
                 knowledge exchange. Get together in a relaxed and upbeat environment with drinks and food provided as 
@@ -284,7 +284,7 @@
               <div class="line"></div>
             </div>
             <div class="schedule-right">
-              <h2 class="news-title italic mt-0">Day 2.0 - Sunday 16/06/19</h2>
+              <h2 class="countdown-title italic mt-0">Day 2.0 - Sunday 16/06/19</h2>
               <p>
                 Start off the day light and easy with a cup of morning coffee with compliments from us to boost your 
                 energy. Day 2 kicks off with another keynote speaker in a state-of-the-art venue packed with motivated 
@@ -299,7 +299,7 @@
               <div class="line"></div>
             </div> 
             <div class="schedule-right">
-                <h2 class="news-title italic mt-0">Day 2.1 - Afternoon</h2>
+                <h2 class="countdown-title italic mt-0">Day 2.1 - Afternoon</h2>
                 <p>
                 Don’t pass on the chance to learn or improve your knowledge on a subject that could provide you with 
                 a competitive edge. Take advantage of an extended and diversified list of talks and workshops. 
@@ -313,7 +313,7 @@
               <div class="line"></div>
             </div> 
             <div class="schedule-right">
-                <h2 class="news-title italic mt-0">Day 2.2 - Closing</h2>
+                <h2 class="countdown-title italic mt-0">Day 2.2 - Closing</h2>
                 <p>
                 We wrap off the 2 day conference with our final keynote speaker, We gather our sponsors, partners, 
                 team and you as we  advance our community effort to the next level for Pycon in Thailand.
