--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -390,6 +390,16 @@
                 <img alt="" src="/logos-2009/Partner-Salween.png" />
               </div>
             </a>
+          <h3 class="sponsors-subhead">
+            DESIGN & MARKETING PARTNER
+          </h3>
+            <a class="sponsors-link sponsors-link--partner"
+              href="https://marketingcan.com"
+              target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/partner-marketingcan.png" />
+              </div>
+            </a>
           </div>
         </section>
 
@@ -397,10 +407,10 @@
     <div>
         <div class="text-center">
             <p class="welcome-submission-text text-center">
-                Limited sponsorship are still available.
+                SPONSORSHIP IS CLOSED. THANK YOU FOR YOUR SUPPORT. CONTACT US FOR OTHER INFO.
             </p>
-            <a href="/sponsorship" class="btn-primary btn-lg get-ticket-btn">
-                Sponsorship
+            <a href="mailto:contact@pyconthailand.org" class="btn-primary btn-lg get-ticket-btn">
+                CONTACT
             </a>
         </div>
     </div>
