--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -390,9 +390,13 @@
                 <img alt="" src="/logos-2009/Partner-Salween.png" />
               </div>
             </a>
-          <h3 class="sponsors-subhead">
+          </div>
+        </section>
+    <section class="sponsors-section">                                                             
+       <h3 class="sponsors-subhead">
             DESIGN & MARKETING PARTNER
           </h3>
+       <div class="sponsors-cards">
             <a class="sponsors-link sponsors-link--partner"
               href="https://marketingcan.com"
               target="_blank">
@@ -400,10 +404,9 @@
                 <img alt="" src="/logos-2009/partner-marketingcan.png" />
               </div>
             </a>
-          </div>
-        </section>
-
-    </div>
+      </div> 
+   </section>                                                        
+  </div>
     <div>
         <div class="text-center">
             <p class="welcome-submission-text text-center">
@@ -446,3 +449,4 @@
             }
         }, 1000);
     </script>
+ </div>
