--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -462,17 +462,29 @@
               </a>
             </div>
           </section>
+         <section class="sponsors-section">                                                             
+           <h3 class="sponsors-subhead">
+             DESIGN & MARKETING PARTNER</h3>
+             <div class="sponsors-cards">
+                <a class="sponsors-link sponsors-link--partner"
+                   href="https://marketingcan.com"
+                   target="_blank">
+                  <div class="sponsors-card">
+                   <img alt="" src="/logos-2009/partner-marketingcan.png" />
+                  </div>
+                </a>
+              </div> 
+         </section>        
         </section>
       </div>
     </div>
     <div>
       <div class="text-center">
         <p class="welcome-submission-text text-center">
-          Limited sponsorship are still available.
-        </p>
-        <a href="/en/sponsorship" class="btn-primary btn-lg get-ticket-btn">
-          Sponsorship
-        </a>
+          SPONSORSHIP IS CLOSED. THANK YOU FOR YOUR SUPPORT. CONTACT US FOR OTHER INFO.</p>
+         <a href="mailto:contact@pyconthailand.org" class="btn-primary btn-lg get-ticket-btn">
+            CONTACT
+         </a>
       </div>
     </div>
   </section>
