--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -332,14 +332,12 @@
         <section class="welcome-submission w-full">
           <div class="col-sm-12">
             <h2 class="welcome-submission-title red-prepostline font-bold">
-              WE WELCOME YOUR SUBMISSION!
+             SUBMISSION FOR TALKS
             </h2>
-            <p class="welcome-submission-text text-large">
-              Join our keynote speakers for the 2nd edition of Pycon Thailand. Submit your papers while you can! Closing date is coming
-              soon: 24 May 2019
+            <p class="welcome-submission-text text-sm mb-8">
+                Submission for talks is closed. Thank you for your support and interest.
             </p>
           </div>
-          <a href="https://www.papercall.io/pyconth19" class="btn-primary btn-lg get-ticket-btn"> Submit Talk</a>
         </section>
       </div>
     </div>
@@ -369,6 +367,11 @@
                   <img alt="" src="/logos-2009/plat-SCB.png" />
                 </div>
               </a>
+              <a class="sponsors-link sponsors-link--platinum" href="https://www.microsoft.com/th-th" target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/microsoft.png" width="300" />
+              </div>
+            </a>
               <a class="sponsors-link sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/partner-TDPK.png" />
@@ -390,7 +393,27 @@
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/gold-odds_logo.png" />
               </div>
-            </a>             
+              </a> 
+            <!--<a class="sponsors-link sponsors-link--gold" href="https://www.cloudflare.com/" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-cloudflare.png" width="250"/>
+                    </div>
+                  </a> -->  
+                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/gold-trinityroots.png" width="250"/>
+                    </div>
+                  </a> -->   
+                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.hot-now.com/" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
+                    </div>
+                  </a> -->
+                   <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
+                    </div>
+                  </a> -->                     
           </div>
          </section>
 
@@ -415,6 +438,31 @@
                   <img alt="" src="/logos-2009/silver-elastic.png" />
                 </div>
               </a>
+              <a class="sponsors-link sponsors-link--silver" href="http://www.gopomelo.com" target="_blank">
+                <div class="sponsors-card">
+                   <img alt="" src="/logos-2009/Silver-gopomelo.png" />
+                 </div>
+               </a>
+               <a class="sponsors-link sponsors-link--silver" href="https://www.pythonic-exam.com/en" target="_blank">
+                <div class="sponsors-card">
+                   <img alt="" src="/logos-2009/silver-pythoned.png" />
+                 </div>
+               </a>
+               <!--<a class="sponsors-link sponsors-link--silver" href="http://www.jetbrains.com" target="_blank">
+                <div class="sponsors-card">
+                   <img alt="" src="/logos-2009/Silver-jetbrains.png" />
+                 </div>
+               </a>-->
+               <!--<a class="sponsors-link sponsors-link--silver" href="http://www.swpark.or.th/index.php" target="_blank">
+                <div class="sponsors-card">
+                   <img alt="" src="/logos-2009/silver-swpark.png" />
+                 </div>
+               </a>-->
+               <!--<a class="sponsors-link sponsors-link--silver" href="https://www.prtr.com/" target="_blank">
+                <div class="sponsors-card">
+                   <img alt="" src="/logos-2009/silver-PRTR.png" />
+                 </div>
+               </a>-->
             </div>
           </section>
 
@@ -458,6 +506,16 @@
               <a class="sponsors-link sponsors-link--partner" href="https://www.ticketmelon.com" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+                </div>
+              </a>
+              <a class="sponsors-link sponsors-link--partner" href="https://www.asiablockchainreview.com/" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/partner-ABR-logo.png" />
+                </div>
+              </a>
+              <a class="sponsors-link sponsors-link--partner" href="http://www.womenwhocodethailand.com" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/partner-womenwhocode.jpeg" />
                 </div>
               </a>
             </div>
