--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -241,16 +241,12 @@
       <section class="welcome-submission w-full">
         <div class="col-sm-12">
           <h2 class="welcome-submission-title red-prepostline font-bold">
-            WE WELCOME YOUR SUBMISSION!
+           SUBMISSION FOR TALKS
           </h2>
           <p class="welcome-submission-text text-sm mb-8">
-              Join our keynote speakers for the 2nd edition of Pycon Thailand.</br>
-            We're open to submission for papers now!
+              Submission for talks is closed. Thank you for your support and interest.
           </p>
         </div>
-        <span href="https://www.papercall.io/pyconth19" class="btn-primary btn-lg get-ticket-btn">
-          <a href="https://www.papercall.io/pyconth19">Submit Talk</a>
-        </span>
       </section>
     </div>
   </div>
@@ -278,18 +274,22 @@
                 <img alt="" src="/logos-2009/plat-SCB.png" width="300" />
               </div>
             </a>
-            <a
-              class="sponsors-link sponsors-link--platinum"
+            <a class="sponsors-link sponsors-link--platinum"
+              href="https://www.microsoft.com/th-th"
+              target="_blank">
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/microsoft.png" width="300" />
+              </div>
+            </a>
+            <a class="sponsors-link sponsors-link--platinum"
               href="http://www.truedigitalpark.com"
-              target="_blank"
-            >
+              target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
               </div>
             </a>
           </div>
         </section>
-      
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             GOLD Sponsors
@@ -304,7 +304,27 @@
                     <div class="sponsors-card">
                       <img alt="" src="/logos-2009/gold-odds_logo.png" width="250"/>
                     </div>
-                  </a>             
+                  </a>    
+                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.cloudflare.com/" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-cloudflare.png" width="250"/>
+                    </div>
+                  </a> -->  
+                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/gold-trinityroots.png" width="250"/>
+                    </div>
+                  </a> -->   
+                  <!--<a class="sponsors-link sponsors-link--gold" href="https://www.hot-now.com/" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
+                    </div>
+                  </a> -->
+                   <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank>
+                    <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
+                    </div>
+                  </a> -->         
                 </div>
                 </section>
                                                                       
@@ -314,16 +334,12 @@
           </h3>
           <div class="sponsors-cards">
             <a
-              class="sponsors-link sponsors-link--silver"
-              href="https://www.vizrt.com/contact/vizrt--thailand"
-              target="_blank">
+              class="sponsors-link sponsors-link--silver" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank">
                 <div class="sponsors-card">
                 <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
               </div>
             </a>
-               <a class="sponsors-link sponsors-link--silver"
-              href="https://www.parkerbridge.co.th/"
-              target="_blank">
+               <a class="sponsors-link sponsors-link--silver" href="https://www.parkerbridge.co.th/" target="_blank">
               <div class="sponsors-card">
                 <img alt="" src="/logos-2009/silver-PB.png" />
               </div>
@@ -333,6 +349,31 @@
                   <img alt="" src="/logos-2009/silver-elastic.png" />
                 </div>
               </a>
+              <a class="sponsors-link sponsors-link--silver" href="http://www.gopomelo.com" target="_blank">
+               <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/Silver-gopomelo.png" />
+                </div>
+              </a>
+              <a class="sponsors-link sponsors-link--silver" href="https://www.pythonic-exam.com/en" target="_blank">
+               <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-pythoned.png" />
+                </div>
+              </a>
+              <!--<a class="sponsors-link sponsors-link--silver" href="http://www.jetbrains.com" target="_blank">
+               <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/Silver-jetbrains.png" />
+                </div>
+              </a>-->
+              <!--<a class="sponsors-link sponsors-link--silver" href="http://www.swpark.or.th/index.php" target="_blank">
+               <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-swpark.png" />
+                </div>
+              </a>-->
+              <!--<a class="sponsors-link sponsors-link--silver" href="https://www.prtr.com/" target="_blank">
+               <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-PRTR.png" />
+                </div>
+              </a>-->
           </div>
         </section>
 
@@ -390,6 +431,16 @@
                 <img alt="" src="/logos-2009/Partner-Salween.png" />
               </div>
             </a>
+            <a class="sponsors-link sponsors-link--partner" href="https://www.asiablockchainreview.com/" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/partner-ABR-logo.png" />
+                </div>
+              </a>
+              <a class="sponsors-link sponsors-link--partner" href="http://www.womenwhocodethailand.com" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/partner-womenwhocode.jpeg" />
+                </div>
+              </a>
           </div>
         </section>
     <section class="sponsors-section">                                                             
