--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -46,26 +46,26 @@
    <div class="features">
       <div class="item">
         <img alt="" src="/airplane-grad.png" />
-        <h3>4 Keynotes</h3>
+        <h3>4 การนำเสนอ</h3>
         <p>
         </p>
       </div>
       <div class="item">
         <img alt="" src="/talks-grad.png" />
-        <h3>+40 talks</h3>
+        <h3>+40  เรื่อง</h3>
         <p>
         </p>
       </div>
       <div class="item">
         <img alt="" src="/python.png" />
-        <h3>+300 Pythonistas</h3>
+        <h3>กับชาวไพธอนมากกว่า +300 คน</h3>
         <p>
           
         </p>
       </div>
       <div class="item">
         <img alt="" src="/party-grad.png" />
-        <h3>1 great party</h3>
+        <h3>1  ปาร์ตี้สุดเจ๋ง</h3>
         <p>
           
         </p>
