--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -34,7 +34,7 @@ type: micro
         </p>
       </div>
     </div>
-    <!-- <div class="sponsors-card-wrap">
+   <div class="sponsors-card-wrap">
                 <div class="sponsors-card-wrap__left">
                     <a class="sponsors-link--platinum" href="https://www.microsoft.com/th-th" target="_blank">
                         <div class="sponsors-card">
@@ -47,7 +47,7 @@ type: micro
                       
                     </p>
                 </div>
-            </div>-->
+            </div>
     <div class="sponsors-card-wrap">
       <div class="sponsors-card-wrap__left">
         <a class="sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
@@ -58,7 +58,12 @@ type: micro
       </div>
       <div class="sponsors-card-wrap__right">
         <p>
-          <!-- company description -->
+          True Digital Park (TDPK) is a workspace and a territory that unites thinkers, creators & innovators. 
+          It is Thailand's first and southeast Asia’s largest startup ecosystem that aims to power Thailand to become a global hub for digital innovation. 
+          Conveniently situated along BTS Sukhumvit Line at Punnawithi Station. Under an “open innovation” concept, 
+          TDPK brings together multinational companies, startups, business operators, investors, government agencies, and R&D centers. 
+          With a combination of co-working space, office space, innovation space, and event space, 
+          TDPK is but an established digital community that provides crucial knowledge creation that is supportive to digital innovations.
         </p>
       </div>
     </div>
@@ -182,7 +187,7 @@ type: micro
                 </p>
             </div>
         </div>
-        <!--<div class="sponsors-card-wrap">
+        <div class="sponsors-card-wrap">
             <div class="sponsors-card-wrap__left">
               <a class="sponsors-link--silver" href="http://www.gopomelo.com" target="_blank">
                 <div class="sponsors-card">
@@ -196,7 +201,21 @@ type: micro
                  Join us and let’s transform your business with GoPomelo Cloud Solutions. 
               </p>
             </div>
-          </div>-->
+          </div>
+          <div class="sponsors-card-wrap">
+            <div class="sponsors-card-wrap__left">
+              <a class="sponsors-link--silver" href="https://www.pythonic-exam.com/en" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-pythoned.png" />
+                </div>
+              </a>
+            </div>
+            <div class="sponsors-card-wrap__right">
+              <p>
+                
+              </p>
+            </div>
+          </div>
         <!--<div class="sponsors-card-wrap">
             <div class="sponsors-card-wrap__left">
               <a class="sponsors-link--silver" href=" http://www.swpark.or.th/index.php" target="_blank">
@@ -362,6 +381,34 @@ type: micro
                 </p>
             </div>
         </div>
+        <div class="sponsors-card-wrap">
+          <div class="sponsors-card-wrap__left">
+              <a class="sponsors-link--partner" href="https://www.asiablockchainreview.com/" target="_blank">
+                  <div class="sponsors-card">
+                      <img alt="" src="/logos-2009/partner-ABR-logo.png" />
+                  </div>
+              </a>
+          </div>
+          <div class="sponsors-card-wrap__right">
+              <p>
+                  <!-- company description -->
+              </p>
+          </div>
+      </div>
+      <div class="sponsors-card-wrap">
+        <div class="sponsors-card-wrap__left">
+            <a class="sponsors-link--partner" href="http://www.womenwhocodethailand.com" target="_blank">
+                <div class="sponsors-card">
+                    <img alt="" src="/logos-2009/partner-womenwhocode.jpeg" />
+                </div>
+            </a>
+        </div>
+        <div class="sponsors-card-wrap__right">
+            <p>
+                <!-- company description -->
+            </p>
+        </div>
+    </div>
     </div>
 </section>
 
