--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -25,20 +25,15 @@ type: micro
             </div>
             <div class="sponsors-card-wrap__right ">
               <p>
-                Siam Commercial Bank was established by royal charter on January 30, 1907 as the first Thai bank. During its more than 110 years
-                in business, the Bank has played a leading role in providing the financial services needed in Thailand, developing deep expertise.
-              </p>
-              <p>
-                Under the vision to serve as "The Most Admired Bank,” SCB has established a strategic plan called SCB Transformation, designed to
-                dramatically upgrade the Bank's infrastructure and enhance its long-term competitiveness. This transformative plan responds to
-                rapid change in the financial services industry, which is being reshaped by digital technology, regulatory change and new consumer
-                behavior. Following this strategic plan's "Going Upside Down" approach, the Bank will transform its business model and thinking
-                throughout its human resources, work processes, products and technology, enabling breakthrough performance and creating
-                sustainable value for our customers and society.
+                ธนาคารไทยพาณิชย์เป็นธนาคารไทยแห่งแรก ก่อตั้งขึ้นเมื่อวันที่ 30 มกราคม 2449 เป็นธนาคารที่ให้บริการทางการเงินครบวงจรชั้นนำของประเทศ
+                ภายใต้วิสัยทัศน์ที่จะเป็น “ธนาคารที่น่าชื่นชมที่สุด (The Most Admired Bank)” ธนาคารได้มียุทธศาสตร์หลักภายใต้โครงการ Transformation 
+                ที่ถูกออกแบบมาเพื่อปรับรากฐานต่างๆ ที่สำคัญ เพิ่มขีดความสามารถในการแข่งขันในระยะยาว ท่ามกลางการเปลี่ยนแปลงทางโครงสร้างของธุรกิจการเงินที่มีเทคโนโลยีดิจิทัลเป็นตัวขับเคลื่อน 
+                เพื่อสร้างความแตกต่าง พร้อมทั้งสร้างคุณค่าให้แก่ลูกค้าและสังคมอย่างยั่งยืน
+
               </p>
             </div>
           </div>
-          <!-- <div class="sponsors-card-wrap">
+          <div class="sponsors-card-wrap">
                       <div class="sponsors-card-wrap__left">
                           <a class="sponsors-link--platinum" href="https://www.microsoft.com/th-th" target="_blank">
                               <div class="sponsors-card">
@@ -51,7 +46,7 @@ type: micro
                             
                           </p>
                       </div>
-           </div>-->
+           </div>
           <div class="sponsors-card-wrap">
             <div class="sponsors-card-wrap__left">
               <a class="sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
@@ -62,7 +57,11 @@ type: micro
             </div>
             <div class="sponsors-card-wrap__right">
               <p>
-                <!-- company description -->
+                ทรู ดิจิทัล พาร์ค เป็นพื้นที่ทำงานที่มีระบบนิเวศที่สมบูรณ์แบบสำหรับสตาร์ตอัพแห่งแรกในไทยที่ใหญ่ที่สุดในภูมิภาคเอเชียตะวันออกเฉียงใต้ 
+                ที่นี่คือศูนย์กลางนวัตกรรมดิจิทัล และเป็นพื้นที่เพื่อการสร้างสรรค์นวัตกรรม มีพันธมิตรบริษัทเทคโนโลยีชั้นนำระดับโลก นักลงทุน หน่วยงานการศึกษา 
+                และสตาร์ทอัพ รวมทั้งหน่วยงานภาครัฐ เชื่อมโยงความร่วมมือจากทุกภาคส่วน ทำให้เกิดเป็นระบบนิเวศสมบูรณ์แบบสำหรับเหล่าสตาร์ตอัพ ภายใต้แนวคิด 
+                Open Innovation ซึ่งจะทำให้เกิดการถ่ายเทและหลอมรวมองค์ความรู้ด้านดิจิทัล ท่ามกลางบรรยากาศและสิ่งแวดล้อมที่เอื้อต่อการสร้างสรรค์นวัตกรรม 
+                และรองรับการทำงานและการใช้ชีวิตในยุคดิจิทัลได้อย่างลงตัว
               </p>
             </div>
           </div>
@@ -186,7 +185,7 @@ type: micro
                       </p>
                   </div>
               </div>
-              <!--<div class="sponsors-card-wrap">
+              <div class="sponsors-card-wrap">
                   <div class="sponsors-card-wrap__left">
                     <a class="sponsors-link--silver" href="http://www.gopomelo.com" target="_blank">
                       <div class="sponsors-card">
@@ -200,7 +199,21 @@ type: micro
                        Join us and let’s transform your business with GoPomelo Cloud Solutions. 
                     </p>
                   </div>
-                </div>-->
+                </div>
+                <div class="sponsors-card-wrap">
+                    <div class="sponsors-card-wrap__left">
+                      <a class="sponsors-link--silver" href="https://www.pythonic-exam.com/en" target="_blank">
+                        <div class="sponsors-card">
+                          <img alt="" src="/logos-2009/silver-pythoned.png" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="sponsors-card-wrap__right">
+                      <p>
+                        
+                      </p>
+                    </div>
+                  </div>
               <!--<div class="sponsors-card-wrap">
                   <div class="sponsors-card-wrap__left">
                     <a class="sponsors-link--silver" href=" http://www.swpark.or.th/index.php" target="_blank">
@@ -366,6 +379,34 @@ type: micro
                       </p>
                   </div>
               </div>
+              <div class="sponsors-card-wrap">
+                <div class="sponsors-card-wrap__left">
+                    <a class="sponsors-link--partner" href="https://www.asiablockchainreview.com/" target="_blank">
+                        <div class="sponsors-card">
+                            <img alt="" src="/logos-2009/partner-ABR-logo.png" />
+                        </div>
+                    </a>
+                </div>
+                <div class="sponsors-card-wrap__right">
+                    <p>
+                        <!-- company description -->
+                    </p>
+                </div>
+            </div>
+            <div class="sponsors-card-wrap">
+              <div class="sponsors-card-wrap__left">
+                  <a class="sponsors-link--partner" href="http://www.womenwhocodethailand.com" target="_blank">
+                      <div class="sponsors-card">
+                          <img alt="" src="/logos-2009/partner-womenwhocode.jpeg" />
+                      </div>
+                  </a>
+              </div>
+              <div class="sponsors-card-wrap__right">
+                  <p>
+                      <!-- company description -->
+                  </p>
+              </div>
+          </div>
           </div>
       </section>
 
