--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -169,6 +169,7 @@ type: micro
                 Are you looking to hire or are you finding a job? Then think about us! Parker Bridge – The best find in Recruitment.
               </p>
             </div>
+           </div>
               <div class="sponsors-card-wrap">
                   <div class="sponsors-card-wrap__left">
                       <a class="sponsors-link--silver" href="http://elastic.co" target="_blank">
