--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -368,10 +368,20 @@
                 </div>
               </a>
               <a class="sponsors-link sponsors-link--platinum" href="https://www.microsoft.com/th-th" target="_blank">
-              <div class="sponsors-card">
-                <img alt="" src="/logos-2009/microsoft.png" width="300" />
-              </div>
-            </a>
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/microsoft.png" width="300" />
+                </div>
+              </a>
+            </div>
+          </section>
+
+          <section class="sponsors-section">
+            <h3 class="sponsors-subhead">
+            <section class="sponsors-section">
+            <h3 class="sponsors-subhead">
+              VENUE Partner
+            </h3>
+            <div class="sponsors-cards">
               <a class="sponsors-link sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/partner-TDPK.png" />
