--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -281,15 +281,23 @@
                 <img alt="" src="/logos-2009/microsoft.png" width="300" />
               </div>
             </a>
-            <a class="sponsors-link sponsors-link--platinum"
-              href="http://www.truedigitalpark.com"
-              target="_blank">
-              <div class="sponsors-card">
-                <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
-              </div>
-            </a>
           </div>
         </section>
+
+        <section class="sponsors-section">
+            <h3 class="sponsors-subhead">
+            <section class="sponsors-section">
+            <h3 class="sponsors-subhead">
+              VENUE Partner
+            </h3>
+            <div class="sponsors-cards">
+              <a class="sponsors-link sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/partner-TDPK.png" />
+                </div>
+              </a>
+            </div>
+          </section> 
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             GOLD Sponsors
