--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -48,6 +48,9 @@ type: micro
                     </p>
                 </div>
             </div>
+    <h3 class="sponsors-subhead sponsors-subhead--black">
+    VENUE PARTNER
+  </h3>
     <div class="sponsors-card-wrap">
       <div class="sponsors-card-wrap__left">
         <a class="sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
