--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -47,7 +47,10 @@ type: micro
                           </p>
                       </div>
            </div>
-          <div class="sponsors-card-wrap">
+          <h3 class="sponsors-subhead sponsors-subhead--black">
+          VENUE PARTNER
+        </h3>
+         <div class="sponsors-card-wrap">
             <div class="sponsors-card-wrap__left">
               <a class="sponsors-link--platinum" href="http://www.truedigitalpark.com" target="_blank">
                 <div class="sponsors-card">
