--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -112,7 +112,7 @@ type: micro
                       <div class="sponsors-card-wrap__left">
                           <a class="sponsors-link--gold" href="https://www.hot-now.com/" target="_blank">
                               <div class="sponsors-card">
-                                  <img alt="" src="/logos-2009/Gold-HN.png" />
+                                  <img alt="" src="/logos-2009/Gold-HN.png" height="250" />
                               </div>
                           </a>
                       </div>
