--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -83,7 +83,7 @@ type: micro
             <div class="sponsors-card-wrap__left">
                 <a class="sponsors-link--gold" href="https://newlogic.io/" target="_blank">
                     <div class="sponsors-card">
-                        <img alt="" src="/logos-2009/Gold-newlogic.png" />
+                        <img alt="" src="/logos-2009/Gold-newlogic.png" height="250"/>
                     </div>
                 </a>
             </div>
