--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -399,28 +399,27 @@
                   <img alt="" src="/logos-2009/Gold-newlogic.png" />
                 </div>
               </a>
-                <a class="sponsors-link sponsors-link--gold" href="http://odds.team" target="_blank>
+              <a class="sponsors-link sponsors-link--gold" href="http://odds.team" target="_blank">
                 <div class="sponsors-card">
                   <img alt="" src="/logos-2009/gold-odds_logo.png" />
                 </div>
-                </a> 
-                <a class="sponsors-link sponsors-link--gold" href="https://www.hot-now.com/" target="_blank>
+              </a> 
+                <a class="sponsors-link sponsors-link--gold" href="https://www.hot-now.com/" target="_blank">
                   <div class="sponsors-card">
                     <img alt="" src="/logos-2009/Gold-HN.png" />
                   </div>
                 </a>
-             <a class="sponsors-link sponsors-link--gold" href="https://www.cloudflare.com/" target="_blank>
+             <a class="sponsors-link sponsors-link--gold" href="https://www.cloudflare.com/" target="_blank">
                   <div class="sponsors-card">
                     <img alt="" src="/logos-2009/Gold-cloudflare.png" />
                   </div>
-             </a>  
-                    </a> -->  
-                    <!--<a class="sponsors-link sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank>
+             </a>   
+                    <!--<a class="sponsors-link sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank">
                       <div class="sponsors-card">
                         <img alt="" src="/logos-2009/gold-trinityroots.png" width="250"/>
                       </div>
                     </a> -->   
-                     <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank>
+                     <!--<a class="sponsors-link sponsors-link--gold" href="https://aws.amazon.com/" target="_blank">
                       <div class="sponsors-card">
                         <img alt="" src="/logos-2009/Gold-HN.png" width="250"/>
                       </div>
