--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -402,7 +402,8 @@ type: micro
             </div>
             <div class="sponsors-card-wrap__right">
                 <p>
-                    <!-- company description -->
+                Ticketmelon is a professional online ticketing and event registration solution that provides the tools and technologies 
+                for organizers of all sizes to easily create, sell tickets and promote events.
                 </p>
             </div>
         </div>
